RESOLVED FIXED263935
Fix length passed to H265PpsParser::ParsePpsIdFromSliceSegmentLayerRbsp() when called from ParseFuNalu()
https://bugs.webkit.org/show_bug.cgi?id=263935
Summary Fix length passed to H265PpsParser::ParsePpsIdFromSliceSegmentLayerRbsp() whe...
David Kilzer (:ddkilzer)
Reported 2023-10-30 16:36:32 PDT
Fix length passed to webrtc::H265PpsParser::ParsePpsIdFromSliceSegmentLayerRbsp() when called from webrtc::(anonymous namespace)::ParseFuNalu(). Regressed in 267677@main with Bug 258794. <rdar://117708319>
Attachments
David Kilzer (:ddkilzer)
Comment 1 2023-10-30 16:52:28 PDT
EWS
Comment 2 2023-10-31 02:47:24 PDT
Committed 270002@main (653fe1d005a4): <https://commits.webkit.org/270002@main> Reviewed commits have been landed. Closing PR #19749 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.